--- a/guitar.html
+++ b/guitar.html
@@ -33,7 +33,11 @@
                 TL;DR it's easier to play that way and it's been around since the 1500s. </br>
                 If you need to brush up on your standard tuning knowledge, here's a refresher:</p>
                 <img class="tuning" height="150px" src="./images/standard-tuning.png" alt="Standard Tuning">
-                <p>The highest sounding string is the 1st string (e), the lowest sounding string is the 6th string (E). </br>
+                <ul>    
+                    <li>The highest sounding string is the 1st string (e)</li>
+                    <li>The lowest sounding string is the 6th string (E)</li>
+                </ul>
+                <p>
                 (You wouldn't believe how many students get this wrong, even after years of playing).
                 </p>
             <section>
@@ -72,8 +76,9 @@
                     </div>
                 </div>
                 <p>
-                    One thing we can note is that the major scale consists of two "tetrachords" (basically a four-note scale segment).</br> 
-                    <img src="./images/tetrachord.png" alt="Tetrachord"></br>
+                    One thing we can note is that the major scale consists of two "tetrachords" (basically a four-note scale segment). </br> 
+                    One starts on C, the other on G.
+                    <img src="./images/tetrachord.png" alt="Tetrachord">
                     Some may say this is "the key" to the major scale on the fretboard, because it's a symmetrical shape, but it creates a diagonal shape across the fretboard.</br>
                     The guitar works with positions and diagonal shapes don't stay within one position. That's also why we're not going to be using a strict 3-note-per-string fingering as the basis of our practice, but a variant of it (but I'm getting ahead of myself).</br>
                     It's more an interesting thing to notice than a real "hack" to unlock the fretboard.
@@ -83,7 +88,7 @@
             <section>
                 <h2>3. The Vertical</h2>
                 <p>
-                    If we only take every C note from those scales and connect them, we get these <u>octave patterns</u>:</br>
+                    If we filter out all of the C notes, we get these <u>octave patterns</u>:</br>
                     <img class="fretboard" src="./images/C Octaves.png" alt="C Octaves Full Fretboard">
                 </p>
                 <p>Have a scroll through the different octave shapes below:</p>
@@ -96,19 +101,20 @@
                 </div>
                 <p>
                     Your root is the most important note; it's your anchor. It's the relation between the root and all
-                    the other notes that will determine the resulting sonority; everything is in relation to the root.
+                    the other notes that will determine the resulting sonority; everything is in relation to the root (unless you're playing atonal 12-tone rows).
                     </br>
-                    The better you find and can see your root notes, the more freedom, command and insight you'll have
-                    over the fretboard
+                    The better you can find and see your root notes, the more freedom, command and insight you'll have
+                    over the fretboard.
                 </p>
             </section>
             <section>
                 <h2>4. Navigating The Matrix</h2>
+                <h3>Left, Down, Right</h3>
                 <p>This little concept will make your thinking (and by extension your practicing) very organized and very clear.</p>
                 <p>
-                    On every root note we have 3 general directions in which the rest of the arpeggio/scale goes.</br>
+                    After every root, we have 3 general directions in which the rest of the arpeggio/scale goes.</br>
                     We can continue “behind” the note (Left), “on” the note (Down) or “after” the note (Right).</br>
-                    Every single possibility is contained within these 3 directions and once you have these core principles down you’ll never get lost on the fretboard again.
+                    Every single possibility is contained within these 3 directions and once you have these core principles down, you’ll never get lost on the fretboard again.
                 </p>
                 <h3>3 Directions</h3>
                 <section class="directions">
@@ -134,7 +140,7 @@
                         </video>
                     </section>
                 </section>
-                <p>Let's see how that works if we cycle the directions on our Cs.</p>
+                <p>Let's see how that works if we cycle through the directions on the first three notes of the C major scale.</p>
                 <div class="slider-container">
                     <img id="slider-image-3" class="slider-img" src="imageA.jpg" alt="C Major 1-2-3">
                     <div class="slider-nav">
@@ -142,6 +148,14 @@
                         <button id="next-btn-3" class="slider-button">Next ›</button>
                     </div>
                 </div>
+                <p>What we can observe here, is that either we have:
+                    <ul>
+                        <li>1 note on one string and 2 notes on the next;</li>
+                        <li>2 notes on one string and 1 note on the next;</li>
+                        <li>3 notes on one string.</li>
+                    </ul>
+                </p>
+            <section>
                 <h2>Putting it together</h2>
                 <p>Let’s now combine this with our octave patterns and play a C Major scale in different positions.</p>
                 <p>We’re not going to start at the very first possibility to play a C major scale on the neck, because that would involve using the open strings. 
@@ -159,6 +173,7 @@
                 <p>And finally we’ll shift over one last time and we’ll have our index finger on the 8th fret, so we’re in 8th position.</br>
                 From here we continue after the note.
                 </p>
+                <p>Have a look at the diagrams below:</p>
                 <div class="slider-container">
                     <img id="slider-image-4" class="slider-img" src="imageA.jpg" alt="C Major in three directions">
                     <div class="slider-nav">
@@ -166,7 +181,53 @@
                         <button id="next-btn-4" class="slider-button">Next ›</button>
                     </div>
                 </div>
+                <p>This is what that looks like when we go from C to C per position.</br>
+                    Notice the lighter green notes on the 2nd and 3rd strings. </br>
+                    Because of the tuning of the strings, these notes are doubled. Hence the highlighted color.
+                </p>
+                <div class="slider-container">
+                    <img id="slider-image-5" class="slider-img" src="imageA.jpg" alt="C Major in three directions">
+                    <div class="slider-nav">
+                        <button id="prev-btn-5" class="slider-button">‹ Prev</button>
+                        <button id="next-btn-5" class="slider-button">Next ›</button>
+                    </div>
+                </div>
+                <p>As you can see, we end up with 7 positions. Here are a few other things we can conclude:
+                    <ul>
+                        <li>The lowest possible root is either on the 5th, 6th or 4th string</li>
+                        <li>When the lowest possible root is on the 5th or 6th string, all three directions are possible (Left, Down, Right)</li>
+                        <li>When the lowest possible root is on the 4th string, the only possible direction is Right</li>
+                        <li>If we continue beyond the root notes, we end up with a 3-note-per-string fingering, but with a doubled note on the 2nd and 3rd string</li>
+                    </ul>
+                </p>
             </section>
+            <section>
+                <h2>80/20</h2>
+                <p>I personally spend a disproportiate amount of time practicing the major scale in these positions. In comparison, I barely practice the melodic minor, modes or any other "exotic" scale, as they're sometimes referred to.</br>
+                    80% of the outcome comes from 20% of all causes. This is the 20% I spend my time on that accounts for 80% of the outcome, when it comes to learning the fretboard.</br>
+                    Get this down and then worry about tapping your way through double harmonic major.
+                </p>
+                    <p>The video below is a direct outcome from practicing the major scale with its different directions:</p>
+                <h3>Case Study</h3>
+                    <video class="fretboard" controls src="./video/Root Progression to Holdsworth.mp4" alt="Creating a Holdsworth-like line" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <p>And here's some from free improv over an E pedal.</p>
+                    <video height="320px" controls src="./video/Fusion Improv 22_09_25.mp4" alt="Video improvisation over an E pedal" type="video/mp4" >
+                        Your browser does not support the video tag.
+                    </video>
+            </section>
+            <section>
+                <h2>Closing words</h2>
+                Practicing the fretboard can be daunting and overwhelming (I know it was for me). </br>
+                Developing this method and using it in my practice has made all the difference and I really feel that this is the most important thing I can give to others trying to study the fretboard. </br>
+                I really can't stand it if I see some video or article about "15 minutes to learn the fretboard". It takes years and it honestly never ends. It may have taken you 15 minutes to read this page, but I doubt you now actually know your fretboard. </p>
+                <p>Also as a little sidenote, this whole thing comes down to playing in 7 positions and adhering strictly to those positions. </br>
+                This is for practicing purposes only. If you look at the Improv video, I obviously go all over the neck and don't stick to one position necessarily.</br>
+                After a while, everything chunks back together to create a new whole</br>
+                Just putting it out there.</p>
+            </section>
+        </section>
     </main>
     <footer class="footer">
         <ul>
