--- a/guitar.html
+++ b/guitar.html
@@ -29,16 +29,23 @@
         <section>
             <h2>1. Standard Tuning</h2>
             <p>First, we'll start with the notes of the open strings in standard tuning. </br>
-                Why do we tune the guitar in this "standard" way that we do?</br>
-                TL;DR it's easier to play that way and it's been around since the 1500s. </br>
                 If you need to brush up on your standard tuning knowledge, here's a refresher:</p>
                 <img class="tuning" height="150px" src="./images/standard-tuning.png" alt="Standard Tuning">
+                <p>The strings are tuned in perfect fourhs (E-A-D-G), except there's a major thirrd going from the 3rd to the 2nd string (G - B). </br>
+                    Then there's a perfect fourth again (B-e), making the 1st and 6th string both an E, two octaves apart.</p>
                 <ul>    
                     <li>The highest sounding string is the 1st string (e)</li>
                     <li>The lowest sounding string is the 6th string (E)</li>
                 </ul>
                 <p>
                 (You wouldn't believe how many students get this wrong, even after years of playing).
+                </p>
+                <p>
+                Why do we tune the guitar in this "standard" way that we do?</br>
+                TL;DR it's easier to play and switch from common chords to scales that way, while also minimizing hand movement. </br>
+                It's been around since the 1500s, back when the guitar's ancestors still had 4 or 5 strings. </br>
+                <a href="https://www.fender.com/articles/setup/standard-tuning-how-eadgbe-came-to-be#:~:text=Fortunately%2C%20since%20the%20ADGBE%20tuning,guitar%20tuning%20that%20remains%20today" target="_blank">
+                    Fender</a> has a nice little article about it.
                 </p>
             <section>
                 <h2>2. The Horizontal</h2>
