--- a/guitar.html
+++ b/guitar.html
@@ -63,7 +63,13 @@
                     Whole step - Whole step - Whole step - Half step </br>
                     C - D - E - F - G - A - B - C</br>
                     Do - Re - Mi - Fa - Sol - La - Si - Do
-                </p>
+                    </p>
+                <img class="major-string-2" src="./images/C Major String 2.png" alt="C Major String 2">
+                
+                <ul>
+                    <li>A whole step = 2 frets on the fretboard</li> 
+                    <li>A half step = 1 fret</li>
+                </ul>
                 <p>Here's what that looks like on the 2nd string:
                 </p>
                 
@@ -210,7 +216,7 @@
             </section>
             <section>
                 <h2>80/20</h2>
-                <p>I personally spend a disproportiate amount of time practicing the major scale in these positions. In comparison, I barely practice the melodic minor, modes or any other "exotic" scale, as they're sometimes referred to.</br>
+                <p>I personally spend a disproportionate amount of time practicing the major scale in these positions. In comparison, I barely practice the melodic minor, modes or any other "exotic" scale, as they're sometimes referred to.</br>
                     80% of the outcome comes from 20% of all causes. This is the 20% I spend my time on that accounts for 80% of the outcome, when it comes to learning the fretboard.</br>
                     Get this down and then worry about tapping your way through double harmonic major.
                 </p>
