--- a/guitar.html
+++ b/guitar.html
@@ -213,6 +213,14 @@
                         <li>If we continue beyond the root notes, we end up with a 3-note-per-string fingering, but with a doubled note on the 2nd and 3rd string</li>
                     </ul>
                 </p>
+                <p>Here's another carousel, with larger images and the full scales from top to bottom:</p>
+                <div class="slider-container-cards">
+                    <img id="slider-image-6" class="slider-img" src="imageA.jpg" alt="C Major in three directions">
+                    <div class="slider-nav">
+                        <button id="prev-btn-6" class="slider-button">‹ Prev</button>
+                        <button id="next-btn-6" class="slider-button">Next ›</button>
+                    </div>
+                </div>
             </section>
             <section>
                 <h2>80/20</h2>
@@ -237,7 +245,7 @@
                 I really can't stand it if I see some video or article about "15 minutes to learn the fretboard". It takes years and it honestly never ends. It may have taken you 15 minutes to read this page, but I doubt you now actually know your fretboard. </p>
                 <p>Also as a little sidenote, this whole thing comes down to playing in 7 positions and adhering strictly to those positions. </br>
                 This is for practicing purposes only. If you look at the Improv video, I obviously go all over the neck and don't stick to one position necessarily.</br>
-                After a while, everything chunks back together to create a new whole</br>
+                After a while, everything chunks back together to create a new whole.</br>
                 Just putting it out there.</p>
             </section>
         </section>
